--- a/Sistema_Funcional_de_Bebidas/src/main/java/Visao/Tela_alterar_secretaria.form
+++ b/Sistema_Funcional_de_Bebidas/src/main/java/Visao/Tela_alterar_secretaria.form
@@ -176,6 +176,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField2">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField2ActionPerformed"/>
           </Events>
@@ -279,6 +282,9 @@
           </AuxValues>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField8">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
