--- a/Sistema_Funcional_de_Bebidas/src/main/java/Visao/Tela_cadastrar_secretaria.form
+++ b/Sistema_Funcional_de_Bebidas/src/main/java/Visao/Tela_cadastrar_secretaria.form
@@ -219,7 +219,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="48" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Cadastrar Secret&#xe1;ria(o)"/>
+            <Property name="text" type="java.lang.String" value="Cadastrar Secretaria(o)"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField7">
