--- a/Sistema_Funcional_de_Bebidas/src/main/java/Visao/Tela_inicial_secretaria.form
+++ b/Sistema_Funcional_de_Bebidas/src/main/java/Visao/Tela_inicial_secretaria.form
@@ -116,7 +116,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="48" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Secret&#xe1;ria(o)"/>
+            <Property name="text" type="java.lang.String" value="Secretaria(o)"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButton1">
