--- a/Sistema_Funcional_de_Bebidas/src/main/java/Visao/Tela_login.form
+++ b/Sistema_Funcional_de_Bebidas/src/main/java/Visao/Tela_login.form
@@ -121,10 +121,11 @@
         <Component class="javax.swing.JComboBox" name="jComboBox1">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
+              <StringArray count="4">
                 <StringItem index="0" value="Administrador(a)"/>
                 <StringItem index="1" value="Secretaria(o)"/>
-                <StringItem index="2" value="Prefiro n&#xe3;o dizer"/>
+                <StringItem index="2" value="Cliente"/>
+                <StringItem index="3" value=" "/>
               </StringArray>
             </Property>
           </Properties>
